# base-pattern-engine

./: README.md  TODO.md  pyproject.toml
docs/: happy_path_tutorial.md
src/base_pattern_engine/: __init__.py  cli.py  core.py  engine.py
src/base_pattern_engine/_self/: LICENSE  README.md  pyproject.toml
tests/: test_cli.py  test_engine.py
