[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "base-pattern-engine"
version = "0.1.0"
description = "A minimal Python package instantiation engine."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "George Iordanescu" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "tomlkit>=0.13",
]

[project.scripts]
base-pattern-engine = "base_pattern_engine.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "setuptools>=68",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
base_pattern_engine = ["_self/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
